package domain.enums;

/**
 *
 * @author ivan
 */
public enum DiasDeOperacion {
    LUNES,
    MARTES,
    MIERCOLES,
    JUEVES,
    VIERNES,
    SABADO,
    DOMINGO
}
