package domain.enums;

/**
 *
 * @author ivan
 */
public enum EstadoBoleto {
    USADO,
    PENDIENTE,
    CANCELADO
}
