package domain.enums;

/**
 *
 * @author ivan
 */
public enum EstadoVehiculo {
    OPERATIVO,
    MANTENIMIENTO,
    FUERA_DE_SERVICIO
}
