package domain.enums;

/**
 *
 * @author ivan
 */
public enum TipoBoleto {
    NORMAL,
    ESTUDIANTE,
    TERCERA_EDAD,
    ESPECIAL
}
