package domain.enums;

/**
 *
 * @author ivan
 */
public enum TipoServicio {
    URBANO,
    INTERURBANO,
    EXPRESO,
    NOCTURNO
}
