package domain.enums;

/**
 *
 * @author ivan
 */
public enum TurnoAsignado {
    MANANA,
    TARDE,
    NOCHE
}
