@startuml
class Ruta{
    - codigoRuta: int
    - nombreRuta: String
    - puntoOrigen: Parada
    - puntoDestino: Parada
    - paradasIntermedias: List<Parada>
    - kilometrajeTotal: double
    - tiempoEstimadoMin: int
    - tipoServicio: TipoServicio
    - horarios: List<Horario>
}

class Conductor{
    - idConductor: int
    - nombre: String
    - pApellido: String
    - sApellido: String
    - numLicencia: String
    - categoriaLicencia: CategoriaLicencia
    - fechaVencimientoLicencia: LocalDate
    - turnoAsignado: TurnoAsignado
    - rutasAsignadas: List<Ruta>
}

class Horario{
    - codigoHorario: int
    - rutaAsignada: Ruta
    - horaSalida: LocalTime
    - frecuenciaSalidaMin: int
    - duracionEstimadaMin: int
    - diasDeOperacion: List<DiasDeOperacion>
}

class BoletoTarifa{
    - numBoleto: int
    - viajeAsociado: Viaje
    - tipoBoleto: TipoBoleto
    - precioBoleto: double
    - pago: Pago
    - estadoBoleto: EstadoBoleto
}

class Pasajero{
    - idPasajero: int
    - nombre: String
    - pApellido: String
    - aApellido: String
    - boletos: List<BoletoTarifa>
}

class IncidentesMantenimiento{
    - codigoIncidente: int
    - vehiculoInvolucrado: Vehiculo
    - conductorInvolucrado: Conductor
    - fechaHora: LocalDateTime
    - descripcion: String
    - accionesTomadas: AccionesTomadas
}

class Vehiculo{
    - idVehiculo: int
    - numPlaca: String
    - marca: String
    - modelo: String
    - capacidadPasajeros: int
    - kilometrajeActual: double
    - estadoVehiculo: EstadoVehiculo
    - fechaUltimaRevisionTecnica: LocalDate
}

class Viaje {
    - idViaje: int
    - vehiculo: Vehiculo
    - ruta: Ruta
    - boleto: List<BoletoTarifa>
    - conductor: Conductor
    - incidente: Incidente
}

class Parada {
    - idParada: int
    - nombreParada: String
    - ubicacion: String

}

abstract class Pago {
    - idPago: int
    - monto: double
    - fechaPago: LocalDateTime
}

class PagoEfectivo {
    - montoRecibido: double
}

class PagoTarjeta {
    - numeroTarjeta: String
}

class PagoPrepago {
    - idTarjeta: String
    - saldoDisponible: double
}

enum TipoServicio{
    URBANO
    INTERURBANO
    EXPRESO
    NOCTURNO
}

enum EstadoVehiculo{
    OPERATIVO
    MANTENIMIENTO
    FUERA_DE_SERVICIO
}

enum TurnoAsignado{
    MANANA
    TARDE
    NOCHE
}

enum DiasDeOperacion{
    LUNES
    MARTES
    MIERCOLES
    JUEVES
    VIERNES
    SABADO
    DOMINGO
}

enum TipoBoleto{
    NORMAL
    ESTUDIANTE
    TERCERA_EDAD
    ESPECIAL
}


enum EstadoBoleto{
    USADO
    PENDIENTE
    CANCELADO
}

enum AccionesTomadas{
    REVISION_MECANICA
    CAMBIO_DE_CONDUCTOR
    CANCELACION_DE_VIAJE
}

enum CategoriaLicencia{
    A1
    A2
    B1
    B2
    B3
    C1
    C2
    C3
}

Ruta "1" -- "*" Viaje
Ruta "*" -- "*" Parada
Ruta "1" -- "*" Horario
Viaje "*" -- "1" Vehiculo
Viaje "1" -- "1" IncidentesMantenimiento
Viaje "*" -- "1" Conductor
BoletoTarifa "*" -- "1" Viaje
Pasajero "1" -- "*" BoletoTarifa
BoletoTarifa "1" -- "1" Pago
Pago  --> PagoEfectivo
Pago  --> PagoTarjeta
Pago  --> PagoPrepago


@enduml
